<resources>
    <string name="app_name">Parking Finder</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="welcome_message">Welcome on Parking</string>
    <string name="aplication_logo">Aplication Logo</string>
    <string name="preference_user_data">user_data</string>
    <string name="preference_user_id">"userId"</string>
    <string name="preference_user_email">userEmail</string>
    <string name="preference_user_role">userRole</string>
    <string name="title_activity_main">ClientActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="back_to_login">Back to login</string>
    <string name="edit_text_password">Password *</string>
    <string name="edit_text_login_password">Password</string>
    <string name="edit_text_email">Email *</string>
    <string name="edit_text_login_email">Email</string>
    <string name="edit_text_phone_number">Phone Number</string>
    <string name="edit_text_car_numbers">Car numbers</string>
    <string name="edit_text_fullname">Fullname *</string>
    <string name="register_text">Register on our platform</string>
    <string name="action_bar_open">Open</string>
    <string name="action_bar_close">Close</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_zone">Find by zone</string>
    <string name="menu_map">Parking Locations</string>
    <string name="menu_allparking">All Parking</string>
    <string name="scan_qr">Scan QR Code</string>
    <string name="title_activity_maps">Map</string>
</resources>
